Added todo-detail component

--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -2,5 +2,8 @@
 <hr>
 <hr>
 <ul *ngFor='let todo of todos'>
-    <li>{{goal.id}}=>{{goal.name}}</li>
+    <li>{{todo.id}}=>{{todo.name}}</li>
 </ul>
+<hr>
+<hr>
+<p>You have a total of - {{todos.length}} - todos in your list</p>
